fix: fixes nav behaviour on mobile and tab views

--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -43,7 +43,6 @@ header{
 }
 
 .nav-link{
-  /* /* color: #fff; */
   color: rgb(77, 33, 4); 
   text-decoration: none;
   font-weight: 800;
@@ -71,15 +70,16 @@ header{
   }
 
   .menu{
-    position: absolute;
+    position: fixed;
     right: -100%;
     top: 44px;
-    width: 100%;
-    height: 100%;
+    width: 280px;
+    height: auto;
     padding: 20% 0;
     background-color: #f5f0ef;
     transition: .4s ease-in-out;
     z-index: 999;
+    overflow-x: hidden !important;
   }
 
   .menu ul li{
@@ -106,7 +106,7 @@ header{
   .menu-icon span{
     width: 32px;
     height: 3px;
-    background: #fff;
+    background: #000 !important;
     display: block;
     transition: .2s ease-in-out;
   }
@@ -146,14 +146,15 @@ header{
   }
 
   .menu{
-    position: absolute;
+    position: fixed;
     right: -100%;
     top: 50px;
-    width: 100%;
-    height: 100%;
+    width: 280px;
+    height: auto;
     background-color: #f5f0ef;
     transition: .4s ease-in-out;
     z-index: 999;
+    overflow-x: none;
   }
 
   .menu ul li{
@@ -180,7 +181,7 @@ header{
   .menu-icon span{
     width: 32px;
     height: 3px;
-    background: #fff;
+    background: #000;
     display: block;
     transition: .2s ease-in-out;
   }
