--- a/src/app/shared/navbar2/navbar2.component.css
+++ b/src/app/shared/navbar2/navbar2.component.css
@@ -72,15 +72,16 @@ header{
     }
   
     .menu{
-      position: absolute;
+      position: fixed;
       right: -100%;
       top: 44px;
-      width: 100%;
-      height: 100%;
+      width: 280px;
+      height: auto;
       padding: 20% 0;
       background-color: #f5f0ef;
       transition: .4s ease-in-out;
       z-index: 999;
+      overflow-x: hidden;
     }
 
     .menu ul{
@@ -117,7 +118,7 @@ header{
     .menu-icon span{
       width: 32px;
       height: 3px;
-      background: #fff;
+      background: #000;
       display: block;
       transition: .2s ease-in-out;
     }
@@ -157,14 +158,15 @@ header{
     }
   
     .menu{
-      position: absolute;
+      position: fixed;
       right: -100%;
       top: 50px;
-      width: 100%;
-      height: 100%;
+      width: 280px;
+      height: auto;
       background-color: #f5f0ef;
       transition: .4s ease-in-out;
       z-index: 999;
+      overflow-x: hidden;
     }
   
     .menu ul li{
@@ -191,7 +193,7 @@ header{
     .menu-icon span{
       width: 32px;
       height: 3px;
-      background: #fff;
+      background: #000;
       display: block;
       transition: .2s ease-in-out;
     }
